--- a/test.yaml
+++ b/test.yaml
@@ -40,3 +40,13 @@ metadata:
   name: something 
 spec:
   forProvider: {}
+---
+apiVersion: cassandra.cql.crossplane.io/v1alpha1
+kind: Role
+metadata:
+  name: example-role
+spec:
+  forProvider:
+    privileges:
+      superUser: true
+      login: true
