--- a/package/crds/cassandra.cql.crossplane.io_grants.yaml
+++ b/package/crds/cassandra.cql.crossplane.io_grants.yaml
@@ -428,6 +428,16 @@ spec:
           status:
             description: A GrantStatus represents the observed state of a Grant.
             properties:
+              atProvider:
+                description: A GrantObservation represents the observed state of a
+                  Cassandra grant.
+                properties:
+                  privileges:
+                    description: Privileges represents the applied privileges
+                    items:
+                      type: string
+                    type: array
+                type: object
               conditions:
                 description: Conditions of the resource.
                 items:
